--- a/frontend/src/app/assets/stylesheets/custom.scss
+++ b/frontend/src/app/assets/stylesheets/custom.scss
@@ -113,3 +113,18 @@
 .color-title {
   color: #645e7a
 }
+
+.gridjs-tr td{
+  border: 0 solid #eff0f2;
+  border-bottom-width: 1px;
+  padding: 0.75rem 0.75rem;
+}
+
+.page-link {
+  border-radius: 30px !important;
+  margin: 0 5px !important;
+}
+
+.align-disabled {
+  padding: 0px !important;
+}
